trying to fix heroku integration

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/coleelam/CenaTwitterBot/issues"
   },
+  "dependencies": {
+    "tuiter": "~0.2.12",
+    "express": "~4.9.0"
+},
   "homepage": "https://github.com/coleelam/CenaTwitterBot#readme"
 }
