finally should fix everything

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/coleelam/CenaTwitterBot.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Cole Elam",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/coleelam/CenaTwitterBot/issues"
